feat: Update ChatBot UI, Add Project Docs, Optimize Transcription

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="referrer" content="no-referrer" />
     <title>Automotive AI Vehicle Marketplace</title>
     <meta name="description" content="Premium AI-powered vehicle marketplace. Buy, sell & bid on SUVs, Sedans, Trucks and more with intelligent assistance." />
     <meta name="author" content="Automotive" />
